--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@babel/polyfill": "^7.7.0",
     "@babel/preset-react": "^7.7.0",
     "core-js": "^3.4.1",
+    "normalize.css": "^8.0.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   }
