--- a/.eslintrc
+++ b/.eslintrc
@@ -19,6 +19,7 @@
   "plugins": ["react", "prettier"],
   "rules": {
     "prettier/prettier": "error",
+    "no-underscore-dangle": [0],
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
     "react/state-in-constructor": [1, "never"],
     "react/prop-types": [0]
